--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0",
+    "react-select": "^5.8.0",
     "sort-by": "^1.2.0",
     "sweetalert": "^2.1.2",
     "swiper": "^11.0.5"
