--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
+    "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
     "react-hot-toast": "^2.4.1",
