--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.3.2",
+    "@tanstack/react-query": "^5.8.7",
     "axios": "^1.6.0",
     "firebase": "^10.5.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "preline": "^2.0.2",
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
     "react-countup": "^6.5.0",
