Implement Add Publisher Form in DashBoard

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-awesome-slider": "^4.1.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.2",
     "react-google-charts": "^4.0.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
