--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-google-charts": "^4.0.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.18.0",
     "react-select": "^5.8.0",
     "sort-by": "^1.2.0",
