--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.2",
     "react-google-charts": "^4.0.1",
+    "react-helmet-async": "^2.0.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-infinite-scroll-component": "^6.1.0",
@@ -30,6 +31,7 @@
     "react-select": "^5.8.0",
     "sort-by": "^1.2.0",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.10.1",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
