--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.18",
     "@smastrom/react-rating": "^1.3.2",
     "@tanstack/react-query": "^5.8.7",
     "axios": "^1.6.0",
