--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@headlessui/react": "^1.7.17",
     "@mui/material": "^5.14.18",
     "@smastrom/react-rating": "^1.3.2",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.0",
     "@tanstack/react-query": "^5.8.7",
     "axios": "^1.6.0",
     "firebase": "^10.5.2",
