--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.17",
@@ -37,6 +38,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.18.0",
     "react-select": "^5.8.0",
+    "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.10.1",
